# Experiment-Template

./: .gitignore  .gitlab-ci.yml  EULA.rtf  README.md  eeg_checker.ipynb  libbabciconnect.so.2.3.0  libbacore.so.3.5.0  libsimpleble.so.0  main.py  pixi.toml  pyproject.toml  survey.yml
eeg_checker/: eeg_checker.ipynb  utils.py
models/: p300_reps1.pt  p300_reps3.pt  p300_reps3_fast_cap.pt  p300_reps3_fast_halo.pt
python_api/: LICENSE.md  README.md  pyproject.toml
python_api/brainaccess/: __init__.py  libload.py
python_api/brainaccess/connect/: P300.py  SSVEP.py  processor.py
python_api/brainaccess/core/: __init__.py  device_features.py  device_model.py  eeg_channel.py  eeg_manager.py  full_battery_info.py  gain_mode.py  log_level.py  version.py
python_api/brainaccess/utils/: acquisition.py  exceptions.py
python_api/examples/acquisition/: example_eeg_acquisition_to_mne.py  example_minimal_eeg_acquisition.py
src/: app_sequencer_builder.py  config.py  constants.py  output.txt  run.py  sentence_sequencer.py  sentences.py
src/assets/: en.txt  pl.txt
tests/: test_dummy.py
