[project]
name = "experiment-app"
version = "0.1.0"
description = ""
authors = [
    {name = "KN Neuron"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-acquisition-framework @ git+ssh://git@gitlab.com/kn-neuron/neuroguard/data-acquisition-framework.git@v0.1.0"
]


[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
